syntax = "proto3";

package dark_tower.internal;

import "signaling.proto";

// ============================================================================
// Meeting Controller <-> Media Handler
// ============================================================================

// Request to register a participant with the media handler
message RegisterParticipant {
  string participant_id = 1;
  string meeting_id = 2;
  repeated dark_tower.signaling.MediaStream streams = 3;
}

// Response to participant registration
message RegisterParticipantResponse {
  string connection_token = 1;
  string media_handler_url = 2;
}

// Routing options for media forwarding
message RoutingOptions {
  bool transcode = 1;
  string target_codec = 2;
  uint32 target_bitrate = 3;
  bool mix_audio = 4;  // Mix multiple audio streams
}

// Cascading destination for multi-handler routing
message CascadeDestination {
  string media_handler_url = 1;
  repeated string destination_participant_ids = 2;  // Participants on this handler
}

// Command to route media between participants (supports multi-handler cascading)
message RouteMediaCommand {
  uint64 source_user_id = 1;  // Source participant (8-byte user ID)
  uint32 source_stream_id = 2;  // Source stream (4-byte subscriber ID)
  repeated string destination_participant_ids = 3;  // Direct destinations on this handler
  repeated CascadeDestination cascade_destinations = 4;  // Destinations on other handlers
  RoutingOptions options = 5;
}

// Media telemetry from media handler to meeting controller
message MediaTelemetry {
  uint64 user_id = 1;  // Source participant (8-byte user ID)
  uint32 stream_id = 2;  // Stream identifier (4-byte)
  uint64 bytes_sent = 3;
  uint64 bytes_received = 4;
  float packet_loss = 5;
  uint32 bitrate = 6;
  uint32 jitter_ms = 7;
  uint64 timestamp = 8;
}

// ============================================================================
// Global Controller <-> Meeting Controller
// ============================================================================

// Capacity information for a meeting controller
message ControllerCapacity {
  uint32 max_meetings = 1;
  uint32 current_meetings = 2;
  uint32 max_participants = 3;
  uint32 current_participants = 4;
}

// Health status of a controller
enum HealthStatus {
  PENDING = 0;    // Just registered, not yet verified
  HEALTHY = 1;
  DEGRADED = 2;
  UNHEALTHY = 3;
  DRAINING = 4;   // Graceful shutdown in progress
}

// Request to register a meeting controller with global controller (legacy)
message RegisterMeetingController {
  string controller_id = 1;
  string region = 2;
  string endpoint = 3;
  ControllerCapacity capacity = 4;
}

// Heartbeat from meeting controller to global controller (legacy)
message Heartbeat {
  string controller_id = 1;
  ControllerCapacity capacity = 2;
  HealthStatus health = 3;
}

// MC registration request with both endpoints per ADR-0010
message RegisterMCRequest {
  string id = 1;                      // Unique controller ID
  string region = 2;                  // Deployment region (e.g., "us-east-1")
  string grpc_endpoint = 3;           // gRPC endpoint for GC→MC calls
  string webtransport_endpoint = 4;   // WebTransport endpoint for clients
  uint32 max_meetings = 5;            // Maximum concurrent meetings
  uint32 max_participants = 6;        // Maximum total participants
}

message RegisterMCResponse {
  bool accepted = 1;
  string message = 2;
  uint64 fast_heartbeat_interval_ms = 3;          // 10000ms
  uint64 comprehensive_heartbeat_interval_ms = 4; // 30000ms
}

// Fast heartbeat (10s) - capacity only, minimal payload
message FastHeartbeatRequest {
  string controller_id = 1;
  ControllerCapacity capacity = 2;
  HealthStatus health = 3;
}

// Comprehensive heartbeat (30s) - full metrics
message ComprehensiveHeartbeatRequest {
  string controller_id = 1;
  ControllerCapacity capacity = 2;
  HealthStatus health = 3;
  float cpu_usage_percent = 4;
  float memory_usage_percent = 5;
}

// Meeting configuration
message MeetingConfig {
  string display_name = 1;
  uint32 max_participants = 2;
  bool enable_e2e_encryption = 3;
  bool recording_enabled = 4;
}

// Request to assign a meeting to a controller
message AssignMeeting {
  string meeting_id = 1;
  MeetingConfig config = 2;
}

// Response to meeting assignment
message AssignMeetingResponse {
  bool accepted = 1;
  string reason = 2;  // If not accepted
}

// ============================================================================
// Service Definitions
// ============================================================================

// Media handler service (Meeting Controller -> Media Handler)
service MediaHandlerService {
  rpc Register(RegisterParticipant) returns (RegisterParticipantResponse);
  rpc RouteMedia(RouteMediaCommand) returns (RouteMediaResponse);
  rpc StreamTelemetry(stream MediaTelemetry) returns (TelemetryAck);
}

message RouteMediaResponse {
  bool success = 1;
  string error_message = 2;
}

message TelemetryAck {
  bool received = 1;
}

// Meeting controller service (Global Controller -> Meeting Controller)
service MeetingControllerService {
  rpc RegisterController(RegisterMeetingController) returns (RegistrationResponse);
  rpc SendHeartbeat(Heartbeat) returns (HeartbeatResponse);
  rpc Assign(AssignMeeting) returns (AssignMeetingResponse);
}

// MC→GC service (MCs call this to register and heartbeat)
service GlobalControllerService {
  rpc RegisterMC(RegisterMCRequest) returns (RegisterMCResponse);
  rpc FastHeartbeat(FastHeartbeatRequest) returns (HeartbeatResponse);
  rpc ComprehensiveHeartbeat(ComprehensiveHeartbeatRequest) returns (HeartbeatResponse);
}

message RegistrationResponse {
  bool accepted = 1;
  string controller_id = 2;
}

message HeartbeatResponse {
  bool acknowledged = 1;
  uint64 timestamp = 2;
}
